<resources>
    <string name="app_name">EVENTS</string>
    <string name="chooseOption">CHOOSE AN OPTION</string>
    <string name="accountOption">Account Option</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="elevate_your_events">ELEVATE YOUR EVENTS</string>
    <string name="home_action">Home Action</string>
    <string name="organizer_home">Organizer Home</string>
    <string name="organizer_account">Organizer Account</string>
    <string name="organizer_event">Organizer EVENT</string>
    <!-- SignUp and Login   -->
    <string name="full_name">FULL NAME</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="redirect_to_signup">New User? <u><b>Sign Up</b></u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">EMAIL</string>
    <string name="Search_Event">Search Your Event</string>
    <string name="Search_Events">Search Your Event</string>
    <string name="edit_profile">Customize Profile</string>
    <string name="Setting">Privacy Setting</string>
    <string name="customize_profile">Customize Profile</string>
    <string name="Username">Username</string>
    <string name="Contact">Contact</string>
    <string name="Description">Description</string>
    <string name="AttendeeCancel">Cancel</string>
    <string name="AttendeeSave">Save</string>
    <string name="contact">Contact</string>
    <string name="HomepageDescription">Homepage Description</string>
    <string name="DeleteImage">Delete Image</string>
    <string name="CustomizeImage">Edit Image</string>
    <string name="notification">NOTIFICATION</string>
    <string name="join_event">JOIN EVENT</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="View">View</string>
    <string name="notification_text">NOTIFICATION</string>
    <string name="join_event_text">JOIN EVENTS</string>
    <string name="default_attendee_home_text">Welcome, Anonymous</string>
    <string name="welcome_message">Welcome, %s</string>
    <string name="UploadImage">UPLOAD IMAGE</string>
    <string name="Save">Save</string>
    <string name="hint_email">superman123@gmail.com</string>
    <string name="hint_homepage_description">I am from Edmonton</string>
    <string name="hint_phone">+1 789 233 233</string>
    <string name="Eventname">Event Name</string>
    <string name="create_EventDate">Event Date</string>
    <string name="AddImage">ADD IMAGE</string>
    <string name="Confirm">CONFIRM</string>
    <string name="Previous">Previous</string>
    <string name="create_event_text">Create Event</string>
    <string name="create_event_title_text">"Write the Event Name to Create an event upon submission a unique QR Code "</string>
    <string name="create_event_description">Event Description</string>
    <string name="edit_event">Edit Event</string>
    <string name="sign_up_for_event">Sign Up For Event</string>
    <string name="already_signed_up">Already Signed Up</string>
    <string name="event_date">Date</string>
    <string name="notify_type">Type</string>
    <string name="notify_message">message</string>
    <string name="notification_type">Notification Type</string>
    <string name="notification_content">Notification Content</string>
    <string name="no_notifications_at_this_time">No notifications at this time</string>
    <string name="no_notification_at_this_time">No Notification at this time</string>
    <string name="create_notify">Create Notification</string>
    <string name="see_list_of_attendees">See List Of Attendees</string>
    <string name="QR_code_info">CheckIn QR Code</string>
    <string name="update_event_info">Update Event Information</string>
    <string name="text_location_checkin">Location Of Check In</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="create_announcement_description">Announcement Content</string>
    <string name="create_announcement_text">Create Announcement</string>
    <string name="Back">Back</string>
    <string name="event_information">EVENT INFORMATION</string>
    <string name="basketball_tournament">Basketball Tournament</string>
    <string name="notify_attendees">Notify Attendees</string>
    <string name="select_event">Select Event</string>
    <string name="select_events">Select Events</string>
    <string name="select">Select</string>

    <string name="scan_your_qr_code">SCAN YOUR QR CODE</string>
    <string name="scan">SCAN STATIC QR</string>
    <string name="gallery">Gallery</string>
    <string name="check_in">Check In</string>
    <string name="scan_cancelled">Scan Cancelled</string>
    <string name="update_event_title">Update Event</string>
    <string name="update_event_title_text">Write the Event Name to update event.</string>
    <string name="update">Update</string>
    <string name="notificationdate">Notification Date</string>
    <string name="content">Content</string>
    <string name="Title">Title</string>
    <string name="Delete_notification">Delete</string>
    <string name="share_to_facebook">facebook sharing</string>
    <string name="share_to_google">google sharing</string>
    <string name="download_qr_code">Download QR Code</string>
    <string name="notif_placeholder">Notif Placeholder</string>
    <string name="event_description">Event Description</string>
    <string name="checked_in_1_times">Checked in 1 times</string>
    <string name="last_check_in_march_25_2024">Last check-in: March 25, 2024</string>
    <string name="view">View</string>
    <string name="google_maps_key">GOOGLE_MAPS_KEY</string>
    <string name="restrictiontext">Maximum 1000 characters including spaces</string>
    <string name="history">History</string>
    <string name="title_activity_notification_set_up">NotificationActivitySetUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="QR_code_eventinfo">Event Information QR Code</string>
    <string name="Number_of_limite_attendees">number_of_limite_attendees</string>
    <string name="Number_of_limit_attendees">Number_of_limit_attendees</string>
    <string name="sign_up_limit">Sign Up Limit(Optional)</string>
    <string-array name="event_action_options">
        <item>Check-ins</item>
        <item>Sign-ups</item>
    </string-array>
    <string-array name="image_action_options">
        <item>Event Images</item>
        <item>Profile Images</item>
        <item>QR Codes</item>
    </string-array>
    <string name="default_notification_channel_id">my_notification_channel_id</string>
    <string name="button">Button</string>
    <string name="real_time_scanner">Real Time Scanner</string>
    <string name="real_time_reuse_qr_code">Real-Time Reuse Qr Code</string>
    <string name="qr_code_for_checkin">QR CODE FOR CHECKIN</string>
</resources>