<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/attendeeName"
        android:layout_width="161dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/event_description"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkInFrequency"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="12dp"
        android:text="@string/checked_in_1_times"
        android:textColor="#757575"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/attendeeName" />

    <TextView
        android:id="@+id/latestCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2sp"
        android:text="@string/last_check_in_march_25_2024"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/checkInFrequency" />

    <Button
        android:id="@+id/btnViewEvent"
        android:layout_width="60dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/view"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userProfileImage"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>

